--- a/src/ActivityPub.Inbox.Web/Views/Home/Index.cshtml
+++ b/src/ActivityPub.Inbox.Web/Views/Home/Index.cshtml
@@ -1,8 +1,40 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "About Activitypub Inbox Service";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@model HomeModel;
+
+<h1>Activitypub Inbox Service</h1>
+
+<p>
+    You reached the about page for the inbox service for
+    <a href="https://activitypub.shendrick.net" target="_blank" rel="noopener noreferrer nofollow">
+        https://activitypub.shendrick.net
+    </a>
+</p>
+<p>
+    This is mainly used for bots, so you won't see much in your browser.
+    However, you can learn more about this service by checking the links below.
+</p>
+
+<ul>
+    <li>
+        <strong>Source Code: </strong>
+        <a href="https://github.com/xforever1313/ActivityPub.Inbox" target="_blank" rel="noopener noreferrer nofollow">
+            https://github.com/xforever1313/ActivityPub.Inbox
+        </a>
+    </li>
+    <li>
+        <strong>Software License: </strong>
+        <a href="/Home/License/">AGPL-3.0</a>
+    </li>
+    <li>
+        <a href="/Home/Credits/">View third-party credits</a>
+    </li>
+    <li>
+        <strong>Version: </strong>@Model.Version
+    </li>
+    <li>
+        <strong>API Version: </strong>@Model.Api.Version
+    </li>
+</ul>
