--- a/src/ActivityPub.Inbox.Web/Views/Shared/_Layout.cshtml
+++ b/src/ActivityPub.Inbox.Web/Views/Shared/_Layout.cshtml
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
-    <meta name="description" content="ActivityPub Inbox Service"/>
-    <meta name="keywords" content="activity,dotnet,inbox,pub,service" />
+    <meta name="description" content="@ViewData["Description"]" />
+    <meta name="keywords" content="@ViewData["keywords"]" />
 </head>
 <body>
     @RenderBody()
