--- a/src/ActivityPub.Inbox.Web/Views/Home/Credits.cshtml
+++ b/src/ActivityPub.Inbox.Web/Views/Home/Credits.cshtml
@@ -7,7 +7,7 @@
 @model HomeModel
 
 @{
-    string html = MarkdownToHtmlConverter.Convert( Model.Api.Resources.GetCredits() );
+    string html = MarkdownToHtmlConverter.Convert( Model.Resources.GetCredits() );
 }
 
 <div class="content">
