--- a/src/ActivityPub.Inbox.Web/Views/Home/License.cshtml
+++ b/src/ActivityPub.Inbox.Web/Views/Home/License.cshtml
@@ -7,7 +7,7 @@
 @model HomeModel
 
 @{
-    string html = MarkdownToHtmlConverter.Convert( Model.Api.Resources.GetLicense() );
+    string html = MarkdownToHtmlConverter.Convert( Model.Resources.GetLicense() );
 }
 
 <div class="content">
